--- a/gsea.Rmd
+++ b/gsea.Rmd
@@ -9,22 +9,32 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+**Files:**
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+* /projects/bgmp/shared/Bi623/Assignment_GSEA/CompCoag_pouch_multivar.tsv
+* /projects/bgmp/shared/Bi623/Assignment_GSEA/pouch_RNAseq.tsv
+* /projects/bgmp/shared/Bi623/Assignment_GSEA/pouch_TMM_values.csv
+* /projects/bgmp/shared/Bi623/Assignment_GSEA/stickleback_CPM.tsv
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
-```
 
-## Including Plots
 
-You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
